# ChangeLog for media-fonts/mplus-outline-fonts
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/ChangeLog,v 1.33 2011/09/30 15:17:38 matsuu Exp $

*mplus-outline-fonts-0_pre043 (30 Sep 2011)

  30 Sep 2011; MATSUU Takuto <matsuu@gentoo.org>
  -mplus-outline-fonts-0_pre037.ebuild, +mplus-outline-fonts-0_pre043.ebuild:
  Version bumped. Removed old version.

  14 Jun 2011; Fabian Groffen <grobian@gentoo.org>
  mplus-outline-fonts-0_pre040.ebuild:
  Marked ~x86-macos (#369547) and ~ppc-macos

*mplus-outline-fonts-0_pre040 (09 Jun 2011)

  09 Jun 2011; MATSUU Takuto <matsuu@gentoo.org>
  -mplus-outline-fonts-0_pre033.ebuild, -mplus-outline-fonts-0_pre035.ebuild,
  +mplus-outline-fonts-0_pre040.ebuild:
  Version bumped. Removed old versions.

*mplus-outline-fonts-0_pre037 (30 Mar 2011)

  30 Mar 2011; MATSUU Takuto <matsuu@gentoo.org>
  +mplus-outline-fonts-0_pre037.ebuild:
  Version bumped.

*mplus-outline-fonts-0_pre035 (29 Dec 2010)

  29 Dec 2010; MATSUU Takuto <matsuu@gentoo.org>
  -mplus-outline-fonts-0_pre029.ebuild, +mplus-outline-fonts-0_pre035.ebuild:
  Version bumped. Removed old version.

*mplus-outline-fonts-0_pre033 (02 Oct 2010)

  02 Oct 2010; MATSUU Takuto <matsuu@gentoo.org>
  +mplus-outline-fonts-0_pre033.ebuild:
  Version bumped.

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org>
  mplus-outline-fonts-0_pre030-r1.ebuild:
  Stable for HPPA (bug #286231).

  13 Jun 2010; Christian Faulhammer <fauli@gentoo.org> mplus-outline-fonts-0_pre030-r1.ebuild:
  stable x86, bug 286231

  26 May 2010; Pacho Ramos <pacho@gentoo.org>
  mplus-outline-fonts-0_pre030-r1.ebuild:
  stable amd64, bug 286231

  23 May 2010; <nixnut@gentoo.org> mplus-outline-fonts-0_pre030-r1.ebuild:
  ppc stable #286231

*mplus-outline-fonts-0_pre030-r1 (18 May 2010)

  18 May 2010; MATSUU Takuto <matsuu@gentoo.org>
  -mplus-outline-fonts-0_pre027.ebuild,
  -mplus-outline-fonts-0_pre028.ebuild,