@@ -6,23 +6,13 @@ DIST mplus-TESTFLIGHT-040.tar.gz 24481123 RMD160 9e31f1734215daf789cf732ac318b39
 DIST mplus-TESTFLIGHT-043.tar.gz 29665544 RMD160 4051e25558cd95538747f8292178a23476a66377 SHA1 85f835803ff6c9a722e3377d41139e6b4bc61a07 SHA256 fd18833a8849ac099078a863bf5bb245b6099098d8c5fffebf58e6dd02f28acd
 EBUILD mplus-outline-fonts-0_pre030-r1.ebuild 1053 RMD160 51da909b5b932b57495bf0e1ed30ff6874766a52 SHA1 f73e7a40ed48f2b1ef3cea693030c5f8bf082291 SHA256 fe9d44811e62f9c57c6797b0c7c92ce3b1f8fcf7d94611eb6dbfd3326baa6131
 EBUILD mplus-outline-fonts-0_pre040.ebuild 1080 RMD160 77d63d7e878bd1d44d87877a3f94094b018a821c SHA1 5174288d5268825431c89eb6b8f3288db310e8b5 SHA256 98fc0f59bb81a5c9b354cf37358058662127379a7e75474ecad44e14f088caed
-EBUILD mplus-outline-fonts-0_pre043.ebuild 1079 RMD160 9ec8fd9d7e66e374f4c495e400114cf91561c6da SHA1 c08464f56e2e622c22519b85b00ab17823b40aa1 SHA256 451b24b185d8858d77b43852b2e25000dde0d4c02d0c92cd9dab68cd6f8739e1
-MISC ChangeLog 5880 RMD160 f67856ab2efa5a6777bdfdfc250175b311166021 SHA1 46a3befd2c70fdc4d95a538efbf19cb98364be2b SHA256 856b214833b248784799145467bfd105251418cad8e1acdae4f7533275ec3630
+EBUILD mplus-outline-fonts-0_pre043.ebuild 1090 RMD160 c8134f6963254d3e03dccdb12006b6480f295e06 SHA1 9d48a2e7d7f755ce847f98d43bf6304669775f53 SHA256 48c1139873a0fe34dbf79c43e410c65a236da645a09ad47d9a403d8b2ae36e94
+MISC ChangeLog 6052 RMD160 64f9eb8ee1a9cbab274af1104510e98923628ca6 SHA1 88004b650cf8d07525c78aa251df975ea05a142f SHA256 986d5c09865d607192b05e65825ed38e9090ad2b6f302bd51fb82b1ca139c34a
 MISC metadata.xml 285 RMD160 0e6d279ff572d91ce9021bd1669ec306ce09a880 SHA1 989eaaeb8a6927fb0e2fbb7b4bb61aff33df4d98 SHA256 75c916c235e71f1c9f70ade5d259a3faaba30dcf8fb5cbfb2459cb21f937ddd4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.18 (Darwin)
 
-iQIcBAEBAgAGBQJOhd2XAAoJECaGw+YFKA1pfaIP/RTxPXRNYlSLvu/porqYvF5K
-8zgizlhsb4kAIVFibCsQVgC+eXcaaDnxUyhXxSlUXFk1J/oUH+KtfOCFp/B8mMSM
-69who5MjYaGGfYF2IP44Wjy0tS3NgCbutGL8aGmgLGhJwJwq6ZfB2564wqzrb87m
-hcgX7LKcporZ+sIo3oD0LlFH0SqrlM0nnu4Du4BQeY7Odfp7j5/irnooAYceUOOb
-L8A3wOZv1V7HBUlS7YwfEXDOAi4L625tMexe+nhnSeTzuNX6orM1oBLUs1+WMPqK
-MLhpgZKf5I2yqjEgCLAVi/m05u+eusWjHEEFzAvhP3q0fejcebjHrsobCdNE253C
-pyEhiTYbZ0Z7y5K+XOOpLh5GSq7ItqBayJAB6TYpplR8rUd3DJY8cnqzvqLr+7Fr
-GAnYHbogk31WW5620JH91tB2oC8Jb4iFqnhhRpE0YB2564ZQWgxzD8uhBjYuzQi3
-YWNvWnYGnMvF0M/P4y+3nvVqaq1a80sr5C4G0rgh2qQBwq84gcDhsOfdU+wTDqW8
-sFRzuU1K121hAazt04ldmpnhVhUtAdyFjaxsVGqQ8sF8ZAFV/UdhL3i36S0cVEaR
-q4CYci3slqgtZGJk1Sfb4jRKXX6cjt2eZyzbXoYuHyF/iPSbYgkKfXWf6yjjOIQ2
-fAaSVH81pcONaJFGpYjW
-=f0O2
+iEYEARECAAYFAk7aKdYACgkQX3X2B8XHTolGKwCeJFQsha0hjfmbgs43MmW1Hd7J
+YXYAn1VwxFhK+EajW8b6llVnEclP9AJ3
+=bvfp
 -----END PGP SIGNATURE-----
